# roschat

./: LICENSE.md  README.md
roschat_client/: CMakeLists.txt  package.xml
roschat_client/launch/: client.launch  roschat_client.launch
roschat_client/scripts/: roschat_client_node
roschat_msgs/: CMakeLists.txt  package.xml
roschat_server/: CMakeLists.txt  package.xml
roschat_server/config/: channels.yaml
roschat_server/launch/: server.launch
roschat_server/scripts/: roschat_server_node
