<?xml version="1.0"?>
<package format="2">
  <name>roschat_msgs</name>
  <version>0.0.0</version>
  <description>Messages for the RosChat server and client</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>

  <depend>genmsg</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
